ckanext/odm_nav/fanstatic/aeviator_nav_concept.css
/*GENERAL & SETUP*/

/* Hide browse by topic */
.sec_header{
  display: none !important;
}



/*fonts*/

@font-face {
    font-family: 'Droid Serif';
    src: url('fonts/droidserif_regular/DroidSerif-Regular-webfont.eot');
    src: url('fonts/droidserif_regular/DroidSerif-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/droidserif_regular/DroidSerif-Regular-webfont.woff') format('woff'),
         url('fonts/droidserif_regular/DroidSerif-Regular-webfont.ttf') format('truetype'),
         url('fonts/droidserif_regular/DroidSerif-Regular-webfont.svg#droid_serifregular') format('svg');
    font-weight: normal;
    font-style: normal;

}
/* boilerplate code */

/*screen.css */
#cNavNew li {
  list-style: none;
  float: left;
  margin-left: 0;
  overflow: hidden;
  display: table-cell;
  height: 29px;
}

#cNavNew li.cur > ul {
  display: block;
}

#cNavNew li a {
  font-size: 12px;
  color: #555;
  padding: 0 10px;
  text-decoration: none;
  display: inline-block;
  font-family: TheSansPlain;
  position: relative;
  height: 29px;
  line-height: 29px;
}

#cNavNew li a .cNavState {
  width: 4px;
  height: 4px;
  position: absolute;
  margin-top: -5px;
  left: 50%;
  display: none;
}

#cNavNew li .level2, #cNavNew li .level3 {
  display: none;
  position: absolute;
  left: 0;
  width: 845px;
  padding-left: 200px;
}

#cNavNew li .level2 {
  top: 29px;
}

#cNavNew li .level2 li, #cNavNew li .level2 a {
  height: 29px;
}

#cNavNew li .level2 li {
  /*background: url("/fileadmin/images/cNav_spacer.png") no-repeat; */
  background-position: top right;
  margin: 0;
}

#cNavNew li .level2 li.cur > a, #cNavNew li .level2 li.act > a, #cNavNew li .level2 li:hover > a, #cNavNew li .level2 li.notcur > a, #cNavNew li .level2 li.notact > a {
  color: #0773B6;
}

#cNavNew li .level3 {
  top: 29px;
}

#cNavNew li .level3 li, #cNavNew li .level3 a {
  height: 29px;
}

#cNavNew li .level3 li.cur > a, #cNavNew li .level3 li.act > a, #cNavNew li .level3 li:hover > a, #cNavNew li .level3 li.notcur > a, #cNavNew li .level3 li.notact > a {
  color: #0773B6;
}

#cNavNew.level1 li:hover .level2, #cNavNew .level2 > li:hover .level3 {
  display: block;
}

#cNavNew.level1 li.act .level2 {
  display: block;
}

#cNavNew.level1 li.act .level2 li:hover .level3 {
  display: block;
}

#cNavNew.level1 li .level2 li.act .level3 {
  display: block;
}

.white #mainNav-inner .level1 > li > a {
  color: #97d320;
}

.white #cNavNew {
  background: #97d320;
}

.white #cNavNew.level1 > li > a {
  color: #fff;
}

.white #cNavNew.level1 > li.notcur > a, .white #cNavNew.level1 > li.notact > a {
  background: #07578b;
}

.blue #cNavNew .level2 {
  border-top: 1px solid #ddd;
  top: 29px;
}

.blue #cNavNew .level3 {
  top: 29px;
}

.blue #cNavNew li.cur > a, .blue #cNavNew li.act > a, .blue #cNavNew li:hover > a, .blue #cNavNew li.notcur > a, .blue #cNavNew li.notact > a {
  color: #0773B6;
}

/*odm.css */
.white #cNavNew.current-site-mekong {
  background: #373c6a;
}

.white #headerText span a {
  color: #6393D2;
  text-decoration: none;
  font-family: 'Droid Serif', serif;
  font-size: 48px;
  font-weight: 700;
  letter-spacing: -2px;
}

.white #cNavNew.level1 {
  padding-top: 0px;
}



/*level 1 */
#cNavNew .one-line {
  padding-top: 15px;
  padding-bottom: 20px;
  text-transform: uppercase;
}

/*.white #cNavNew.level1 img{width:45px!important;} */
.white #cNavNew.level1 li.icon_menu {
  height: 45px;
  padding-top: 3px;
}

.white #cNavNew.level1 > li:hover {
  background: #6393D2;
  padding-bottom: 16px;
}

.white #cNavNew.level1 > li:hover > a {
  /*background: #6393D2; */
  background: transparent;
  color: white;
}

/*level 1 hover */
/*level 1 active */
/*#cNavNew.level1>li.cur>a, .white #cNavNew.level1>li.act>a{background: red;} */
/*sub-nav oben */
/*level 2 */
li.top-topic {
  width: 200px;
  background: #4c4c4c;
  color: black;
  font-size: 12px;
  /*color: #555; */
  padding: 0 10px;
  text-decoration: none;
  display: inline-block;
  /*font-family: TheSansPlain; */
  position: relative;
  /*height: 29px; */
  line-height: 29px;
  border-bottom: 1px solid #333333;
}

#cNavNew li .level2 li {
  clear: both;
  color:white;
}

#cNavNew li:hover .level2 {
  width: 220px;
  left: 548px;
  top: 60px;
  padding-left: 0;
  margin: 0;
}

#cNavNew li:hover .menu_environment {
  left: 40px;
}

#cNavNew li:hover .menu_economy {
  left: 105px;
}

#cNavNew li:hover .menu_people {
  left: 170px;
}

/*li.icon_menu a{padding: 0!important;}*/

li.icon_menu{
  /*width: 45px;*/
  height: auto;
  /*margin-top: 5px;*/
}
li.menu_environment img{
  /*width: 65px;*/
  height: 42px;
  margin-top: 10px;
}


li.menu_economy img{
  width: 45px;
  /*height: 49px;*/
  margin-top: 4px;
}

li.menu_people a{width: 21px;}
li.menu_people>a>img{
  height: 34px;
    padding-top: 8px;
}
#cNavNew li:hover .level2 a {
  background: #4c4c4c;
  color: white;
  width: 200px;
}

#cNavNew li .level2 {
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}

#cNavNew li .level2 li:hover > a {
  background: #333333;
  color: white;
  width: 200px;
  /*padding-bottom: 20px;*/
}

#cNavNew li .level3 {
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}

#cNavNew.level1 li:hover .level2, #cNavNew .level2 > li:hover .level3 {
  display: block;
}

/*level 2 hover */
/*general */
[class^="icon-"], [class*=" icon-"] {
  display: inline;
  width: auto;
  height: auto;
  line-height: normal;
  vertical-align: baseline;
  background-image: none;
  background-position: 0% 0%;
  background-repeat: repeat;
  margin-top: 0;
}

.container {
  margin-left: 0px;
  margin-right: 0px;
}

.clearfix:after {
  content: ".";
  display: block;
  height: 0;
  clear: both;
  visibility: hidden;
  display: inline-block;
}

/*main menu */
.mainNav-inner {
  position: absolute;
  width: 140px;
  top: 340px;
}

.mainNavOdc {
  height: 100%;
  width: 140px;
  float: left;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9999;
  background: #4c4c4c;
}

.headerODM {
  background: #292d56;
}

.mainNav-logo {
  margin: 35px 20px;
  float: none;
  font-size: 100px;
}

.icon-od-logo {
  font-family: 'icomoon';
}

.icon-od-logo:before {
  content: "\e600";
}

ul.level1 {
  height: 60px;
  margin-left: 0;
}

.mainNav-inner .level1 li {
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: block;
  width: 140px;
  text-align: right;
  border-top: 1px solid white;
  float: left;
}

.mainNav-inner .level1 li a {
  text-decoration: none;
  line-height: 30px;
  padding-right: 10px;
  display: block;
  font-size: 16px;
  font-family: sans-serif;
  font-weight: bold;
  color:white;
}

.mainNav-inner ul.level1 > li.act > a {
  padding-right: 12px;
  background: #333333;
  color: white;
}
  border-right: 1px solid #dddddd;
}

#mainNav-inner .level1 li a {
  font-family: sans-serif !important;
}

/*end boilerplate */
/*#############################################################################################
 *############################################################################################ */
/*top nav */

.content_wrapper {
  padding-left: 140px;
}

.contentNavigation {
  height: 60px;
  /*top: 30px;*/
  position: relative;
  /*padding-left: 140px;*/
  /*z-index: 100; */
  /*margin-left: -30px; */
}

#cNavNew {
  display: inline-block;
  position: relative;
  padding-left: 40px;
  z-index: 8888;
  /*-moz-box-shadow: 0px 2px 3px 0px #ddd;
   *  -webkit-box-shadow: 0px 2px 3px 0px #ddd;
   *  box-shadow: 0px 2px 3px 0px #ddd; */
  background: #333333;
}

#cNavNew li {
  list-style: none;
  float: left;
  margin-left: 0;
  overflow: hidden;
  display: table-cell;
  height: 60px;
}

#cNavNew .one-line {
  padding-top: 15px;
  padding-bottom: 20px;
  text-transform: uppercase;
}

#cNavNew li a {
  font-size: 12px;
  color: white;
  padding: 0 10px;
  text-decoration: none;
  display: inline-block;
  font-family: TheSansPlain;
  position: relative;
  height: 29px;
  line-height: 29px;
  font-size: 12px;
  /*color: #555;*/
  padding: 0 10px;
  text-decoration: none;
  display: inline-block;
  font-family: sans-serif;
  font-weight: bold;
  position: relative;
  height: 29px;
  line-height: 29px;
}

.white #cNavNew.level1 li.icon_menu {
  height: 45px;
  padding-top: 3px;
}

.icon_menu img{
  width:45px;height:auto;margin-top:5px;
}

/*header */
header#od-head .icon-od-logo {
  display: none;
}
/*tmp hiding account*/
.account-masthead{display: none;}
.masthead .debug{left: 710px;}
/**/
.masthead{
  height: 70px;
  padding:10px 0 0 0;
}
  .masthead hgroup h1.header-text{
    font-family: 'Droid Serif', serif;
    font-size: 48px;
    line-height: 48px;
    font-weight: 700;
    letter-spacing: -2px;
    padding-left: 35px;
  }

    .header-text a{text-decoration: none;}
    .header-text sup{
      font-size: 55%;
      position: relative;
      vertical-align: baseline;
      top: -10px;
    }
    .header-text span{
      line-height: 51px;
      font-size: 24px;
      font-family: TheSerifBold;
      padding-left: 10px;
      letter-spacing: normal;

    }
#od-head {
  padding: 30px 0 0;
  background: #292d56;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 9988;
}

#site-intro {
  margin-top: 165px;
}
  /*level 3*/
  .white #cNavNew.level1 li.icon_menu {
  height: 45px;
  padding-top: 3px;
}
#cNavNew .level2 li.by_country:hover{
  height: 174px;
}
#cNavNew .level2 li.by_type:hover{height: 100%;}
  #cNavNew .level2>li.by_country:hover .level3{
  position: static;
  display: table-cell;
  padding-left: 0!important;
  width: 220px;
}


/*temp */
div#wrap-feedback {
  right: -40px;
  left: initial;
}

